--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/frameConteudo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#161B22"
     tools:context=".activity.MainActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
