eu ou enfiar uma garrafa pet de 2 litros de guarana antartica naquele lugar (o vazio no meu peito)

--- a/app/src/main/res/layout/fragment_catalogo.xml
+++ b/app/src/main/res/layout/fragment_catalogo.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#161B22"
-    tools:context=".fragments.CatalogoFragment">
+    >
 
     <!-- Título do catálogo -->
     <TextView
         android:id="@+id/titulo_catalogo"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="wrap_content"
         android:text="Catálogo"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
+        android:layout_marginTop="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -26,12 +27,12 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/shortlogobranca"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        tools:src="@drawable/shortlogobranca"
         app:layout_constraintTop_toBottomOf="@id/titulo_catalogo"
-        tools:src="@drawable/shortlogobranca" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Barra de pesquisa -->
     <SearchView
@@ -50,59 +51,94 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintMarginTop="16dp" />
 
-    <!-- CardView com GridLayout -->
+    <!-- CardView com itens divididos lado a lado -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:layout_marginTop="32dp"
         android:elevation="8dp"
+        app:cardBackgroundColor="#161B22"
         app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintMarginTop="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search_view">
 
-        <GridLayout
-            android:id="@+id/grid_layout"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alignmentMode="alignMargins"
-            android:columnCount="2"
-            android:padding="16dp"
-            android:rowCount="3">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="8dp">
 
-            <!-- Exemplos de ImageButtons -->
-            <ImageButton
+            <!-- Item 1 -->
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_rowSpan="1"
-                android:layout_rowWeight="1"
-                android:layout_columnSpan="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="4dp"
+                android:layout_weight="1"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/desc_image_1"
-                android:scaleType="centerCrop"
-                android:src="@drawable/your_image_1" />
+                android:onClick="openProfile"
+                android:padding="8dp">
 
-            <ImageButton
+                <ImageView
+                    android:id="@+id/image_view_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/your_image_1"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@drawable/ongs_02" />
+
+                <TextView
+                    android:id="@+id/text_view_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nome do Item 1"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/image_view_1" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <!-- Item 2 -->
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_rowSpan="1"
-                android:layout_rowWeight="1"
-                android:layout_columnSpan="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="4dp"
+                android:layout_weight="1"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/desc_image_2"
-                android:scaleType="centerCrop"
-                android:src="@drawable/your_image_2" />
+                android:onClick="openProfile"
+                android:padding="8dp">
 
-            <!-- Adicione mais ImageButtons conforme necessário -->
+                <ImageView
+                    android:id="@+id/image_view_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/your_image_2"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@drawable/ongs_03" />
 
-        </GridLayout>
+                <TextView
+                    android:id="@+id/text_view_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nome do Item 2"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/image_view_2" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
