--- a/app/src/main/res/layout/fragment_catalogo.xml
+++ b/app/src/main/res/layout/fragment_catalogo.xml
@@ -41,15 +41,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/car_ui_list_item_divider"
-        android:iconifiedByDefault="false"
-        android:queryHint="Pesquisar"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintMarginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- CardView com itens divididos lado a lado -->
     <androidx.cardview.widget.CardView
@@ -84,7 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/your_image_1"
+                    android:src="@drawable/ongs_02"
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -144,5 +138,6 @@
 
 
     </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
