--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,24 +8,58 @@
     tools:context=".fragments.HomeFragment">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageminha1"
         android:layout_width="137dp"
         android:layout_height="107dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/shortlogobranca" />
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textmeu1"
         android:layout_width="wrap_content"
         android:layout_height="108dp"
         android:layout_marginStart="135dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="45dp"
         android:text="Charity Connect"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:typeface="sans" />
+
+    <ImageView
+        android:id="@+id/imagemeu2"
+        android:layout_width="412dp"
+        android:layout_height="220dp"
+        android:layout_marginVertical="110dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:src="@drawable/blogculturadedoacao_removebg_preview" />
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="300dp"
+        app:cardBackgroundColor="#161b22">
+
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="119dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+
+            android:padding="5dp"
+            android:shadowRadius="50"
+            android:text="Conectando Corações: Juntos pela Transformação  Bem-vindo à plataforma onde cada gesto conta.  "
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold" />
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
