--- a/app/src/main/res/layout/fragment_catalogo.xml
+++ b/app/src/main/res/layout/fragment_catalogo.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#161B22"
-    >
+    android:background="#161B22">
 
     <!-- Título do catálogo -->
     <TextView
         android:id="@+id/titulo_catalogo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:text="Catálogo"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Logo do aplicativo -->
     <ImageView
@@ -29,10 +33,10 @@
         android:layout_height="100dp"
         android:layout_marginTop="16dp"
         android:src="@drawable/shortlogobranca"
-        tools:src="@drawable/shortlogobranca"
-        app:layout_constraintTop_toBottomOf="@id/titulo_catalogo"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/titulo_catalogo"
+        tools:src="@drawable/shortlogobranca" />
 
     <!-- Barra de pesquisa -->
     <SearchView
@@ -239,17 +243,6 @@
 
     </androidx.cardview.widget.CardView>
 
-    <ScrollView
-        android:layout_width="34dp"
-        android:layout_height="34dp"
-        tools:layout_editor_absoluteX="361dp"
-        tools:layout_editor_absoluteY="132dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
