--- a/app/src/main/res/layout/faleconosco.xml
+++ b/app/src/main/res/layout/faleconosco.xml
@@ -5,39 +5,46 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="24dp"
-    android:background="#11161d">  <!-- Fundo azul escuro -->
+    android:background="#11161d">  <!-- Cor de fundo azul escuro -->
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Charity Connect"
+        android:textAlignment="center"
+        android:textSize="50sp"
+        android:textColor="#FFFFFF"
+        android:paddingBottom="8dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Formulário para Contato"
-        android:gravity="center"
-        android:textSize="70sp"
-        android:fontFamily="@font/lexend_semibold"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textColor="#FFFFFF"
-        android:paddingBottom="24dp"
-        android:textColor="#707bff"
-        android:backgroundTint="#707bff"
-        android:fontFamily="@font/lexend_semibold"
-        android:textSize="40sp"
-        android:paddingBottom="16dp"/>
+        android:textSize="150px"
+        android:paddingBottom="24dp" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Digite o Motivo do Contato"
-        android:textColorHint="#BFFFFFFF" />
+        android:textColorHint="#BFFFFFFF"
+        android:textColor="#707bff"
+        android:backgroundTint="#707bff"
+        android:textSize="80px"
+        android:paddingBottom="16dp"/>
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="13dp"
-        android:backgroundTint="#707bff"
-        android:fontFamily="@font/lexend_semibold"
+        android:layout_height="wrap_content"
         android:hint="Digite sua pergunta"
-        android:paddingBottom="16dp"
-        android:textColor="#707bff"
         android:textColorHint="#BFFFFFFF"
-        android:textSize="40sp" />
+        android:textColor="#707bff"
+        android:backgroundTint="#707bff"
+        android:textSize="80px"
+        android:paddingBottom="16dp"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -46,41 +53,48 @@
         android:textColorHint="#BFFFFFFF"
         android:textColor="#707bff"
         android:backgroundTint="#707bff"
-        android:fontFamily="@font/lexend_semibold"
-        android:textSize="40sp"
+        android:textSize="80px"
         android:paddingBottom="16dp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#707bff"
-        android:fontFamily="@font/lexend_semibold"
         android:hint="Digite seu sobrenome"
-        android:paddingBottom="16dp"
-        android:textColor="#707bff"
         android:textColorHint="#BFFFFFFF"
-        android:textSize="40sp" />
-
-    <EditText
-        android:layout_width="327dp"
-        android:layout_height="39dp"
+        android:textColor="#707bff"
         android:backgroundTint="#707bff"
-        android:fontFamily="@font/lexend_semibold"
-        android:hint="Digite seu celular"
-        android:inputType="phone"
-        android:textColor="#707bff"
-        android:textColorHint="#BFFFFFFF"
-        android:textSize="40sp" />
+        android:textSize="80px"
+        android:paddingBottom="16dp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#707bff"
-        android:fontFamily="@font/lexend_semibold"
         android:hint="Digite seu email"
-        android:inputType="textEmailAddress"
-        android:paddingBottom="16dp"
-        android:textColor="#707bff"
         android:textColorHint="#BFFFFFFF"
-        android:textSize="40sp" />
+        android:textColor="#707bff"
+        android:backgroundTint="#707bff"
+        android:textSize="80px"
+        android:paddingBottom="16dp"/>
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Digite seu celular"
+        android:textColorHint="#BFFFFFFF"
+        android:textColor="#707bff"
+        android:backgroundTint="#707bff"
+        android:inputType="phone"
+        android:textSize="80px"
+        android:paddingBottom="24dp"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enviar"
+        android:textColor="#FFFFFF"
+        android:background="#707bff"
+        android:textSize="95px"
+        android:borderRadius="50px"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"/>
+</LinearLayout>
